--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,6 +16,9 @@ jobs:
     permissions:
       contents: read
       packages: write
+    strategy:
+      matrix:
+        fw_version: ['2.15.1', '3.3.2', '3.5.2']
     steps:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -32,6 +35,9 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          flavor: |
+            latest=auto
+            suffix=${{ matrix.fw_version }},onlatest=true
 
       - name: Build
         uses: docker/build-push-action@v5
@@ -41,5 +47,7 @@ jobs:
           target: qemu-toltec
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          build-args: |
+            fw_version=${{ matrix.fw_version }}
 
 
