Use dash for xochitl version in image name

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -37,7 +37,7 @@ jobs:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           flavor: |
             latest=auto
-            suffix=${{ matrix.fw_version }},onlatest=true
+            suffix=-${{ matrix.fw_version }},onlatest=true
 
       - name: Build
         uses: docker/build-push-action@v5
