--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,7 +18,7 @@ jobs:
       packages: write
     strategy:
       matrix:
-        fw_version: ['2.15.1', '3.3.2', '3.5.2', '3.8.2']
+        fw_version: ['2.15.1', '3.3.2', '3.5.2', '3.8.3', '3.9.3']
     steps:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
