--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,7 +2,7 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "dev" ]
   pull_request:
     branches: [ "main" ]
 
@@ -18,7 +18,7 @@ jobs:
       packages: write
     strategy:
       matrix:
-        fw_version: ['2.15.1', '3.3.2', '3.5.2', '3.8.3', '3.9.3']
+        fw_version: ['2.15.1', '3.3.2', '3.5.2', '3.8.3', '3.11.2']
     steps:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -42,7 +42,7 @@ jobs:
       - name: Build
         uses: docker/build-push-action@v5
         with:
-          push: ${{ github.event_name != 'pull_request' }}
+          push: ${{ github.event_name != 'pull_request' && github.ref_name == 'main' }}
           tags: ${{ steps.meta.outputs.tags }}
           target: qemu-toltec
           cache-from: type=gha
