--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,7 +2,6 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ "main", "dev" ]
   pull_request:
     branches: [ "main" ]
 
@@ -11,8 +10,40 @@ env:
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
+  build-linux:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-linux
+
+      - name: Build
+        uses: docker/build-push-action@v5
+        with:
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta.outputs.tags }}
+          target: linux-build
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
   build:
     runs-on: ubuntu-latest
+    needs: [build-linux]
     permissions:
       contents: read
       packages: write
