--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,6 +15,8 @@ jobs:
     permissions:
       contents: read
       packages: write
+    outputs:
+      linux-image: ${{ steps.meta.outputs.tags }}
     steps:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -35,7 +37,7 @@ jobs:
       - name: Build
         uses: docker/build-push-action@v5
         with:
-          push: ${{ github.event_name != 'pull_request' && github.ref_name == 'main' }}
+          push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           target: linux-build
           cache-from: type=gha
@@ -89,5 +91,6 @@ jobs:
           cache-to: type=gha,mode=max
           build-args: |
             fw_version=${{ matrix.os.version }}
+            linux_image=${{ needs.build-linux.outputs.linux-image }}
 
 
