--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,34 +14,16 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      packages: write
-    outputs:
-      linux-image: ${{ steps.meta.outputs.tags }}
     steps:
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v3
+      - uses: actions/checkout@v4
+      - uses: nixbuild/nix-quick-install-action@v30
+      - uses: nix-community/cache-nix-action@v6
         with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Docker meta
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-linux
-
-      - name: Build
-        uses: docker/build-push-action@v5
-        with:
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }}
-          target: linux-build
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          primary-key: nix-${{ runner.os }}-${{ hashFiles('**/*.nix', '**/flake.lock') }}
+          gc-max-store-size: 1G
+          purge: true
+      - name: Nix Build
+        run: nix build '.#kernel'
 
   build:
     runs-on: ubuntu-latest
@@ -53,19 +35,37 @@ jobs:
       matrix:
         os:
           - version: '2.15.1.1189'
-            target: qemu-toltec
+            target: nix-toltec
           - version: '3.3.2.1666'
-            target: qemu-toltec
+            target: nix-toltec
           - version: '3.5.2.1807'
-            target: qemu-toltec
+            target: nix-toltec
           - version: '3.8.2.1965'
-            target: qemu-toltec
+            target: nix-toltec
           - version: '3.20.0.92'
-            target: qemu-toltec
+            target: nix-toltec
 
     steps:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+        with:
+          # Have to use docker as we load an external image.
+          # Prevents using cache
+          driver: docker
+
+      - uses: actions/checkout@v4
+      - uses: nixbuild/nix-quick-install-action@v30
+      - uses: nix-community/cache-nix-action@v6
+        with:
+          primary-key: nix-${{ runner.os }}-${{ matrix.os.version }}
+          restore-prefixes-first-match: nix-${{ runner.os }}-
+          gc-max-store-size: 2G
+          purge: true
+
+      - name: Nix Build
+        run: |
+          nix build '.#"docker-${{ matrix.os.version }}"'
+          ./result | docker image load
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
@@ -89,10 +89,10 @@ jobs:
           push: ${{ github.event_name != 'pull_request' && github.ref_name == 'main' }}
           tags: ${{ steps.meta.outputs.tags }}
           target: ${{ matrix.os.target }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          # cache-from: type=gha
+          # cache-to: type=gha,mode=max
+          # linux_image=${{ needs.build-linux.outputs.linux-image }}
           build-args: |
             fw_version=${{ matrix.os.version }}
-            linux_image=${{ needs.build-linux.outputs.linux-image }}
 
 
